@@ -1,5 +1,9 @@
 1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* VarProbe.m ([VarProbe -probeAsString:Buffer:withFullPrecision:],
+	[VarProbe -setData:ToString:]): If long and long long are the
+	same size, don't use LLFMT.
+
 	* swarm_rts_routines.m (skip_typespec): Add case for long double.
 
 	* MessageProbe.m ([MessageProbe -setArg:ToString:], [MessageProbe
